<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">P5M</string>
    <string name="no_internet">No internet connection</string>
    <string name="facebook_app_id" translatable="false">496906260680338</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb496906260680338</string>
    <string name="please_try_later">Please try later</string>
    <string name="info_screen_desc_1">Explore and join fitness classes around you with one plan.</string>
    <string name="info_screen_desc_2">Discover new trainers and studios that cater to your fitness needs.</string>
    <string name="info_screen_desc_3">Filter classes based on location, time and activity to find your perfect workout.</string>
    <string name="info_screen_desc_4">"I don't know where to start" Is no longer an excuse.</string>
    <string name="start_being_active">START BEING ACTIVE</string>
    <string name="setting_notification_fac_details">Get notified when the trainer adds new classes</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="not_now">NOT NOW</string>
    <string name="please_wait">Please wait...</string>
    <string name="terms_of_service">"By login you are agree to our <u>terms of service</u>\nand <u>privacy policy</u>"</string>
    <string name="whats_your_name">What\'s Your Name</string>
    <string name="your_order_details">Your order details</string>
    <string name="and_your_email">And, Your Email ?</string>
    <string name="next">NEXT</string>
    <string name="enter_name">Enter your name</string>
    <string name="create_a_password">Create a password</string>
    <string name="create_your_password">Create your password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="gender_string">Gender</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="google_android_map_api_key" translatable="false">AIzaSyDrh02wGKpo9v4531l5fwUs0jUcXP2bwLk</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">1 min ago</string>
    <string name="minutes_ago">%d mins ago</string>
    <string name="unjoin">Unjoin</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="remove_wishlist_consent">Do you really want to remove <b>%s</b> from wishlist?</string>
    <string name="full_name">Full Name</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="continue_as">CONTINUE AS</string>
    <string name="register">REGISTER</string>
    <string name="login_back">LOGIN</string>
    <string name="start_journey">Start your fitness journey</string>
    <string name="donot_signup">Don\'t have an account?</string>
    <string name="done">Done</string>
    <string name="already_account">Already have an account? </string>
    <string name="already_account_error">Already have an account </string>
    <string name="ok">OK</string>
    <string name="find_class">Find a class</string>
    <string name="trainer">Trainer</string>
    <string name="trainer_profile">Trainer Profile</string>
    <string name="schedule">My Schedule</string>
    <string name="notification">Notification</string>
    <string name="setting_notification_fav_title">Followed trainers activity</string>
    <string name="profile">Profile</string>
    <string name="search_title">Search..</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="activity">Activity</string>
    <string name="find_classes">FIND CLASSES</string>
    <string name="morning">Morning</string>
    <string name="after_Noon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="login_facebook">ENTER WITH FACEBOOK</string>
    <string name="login">"<b><u>Log in</u></b>"</string>
    <string name="login_no_lines">"Log in"</string>
    <string name="sign_up_email">SIGN UP WITH EMAIL</string>
    <string name="booked">Booked</string>
    <string name="full">Full</string>
    <string name="book">Book</string>
    <string name="expired">Session Expired</string>
    <string name="email"><font size="10">Email</font></string>
    <string name="password"><font size="5">Password</font></string>
    <string name="reserve_class">BOOK CLASS</string>
    <string name="favourite">Favourite</string>
    <string name="favorited">Favorited</string>
    <string name="favorite_trainer">Favourite Trainer</string>
    <string name="finished">Finished</string>
    <string name="addInWishList">Added in your wish List</string>
    <string name="add_to_WishList">Add to wishlist</string>
    <string name="remove_WishList">Remove from wishlist</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="dob">Date of  birth</string>
    <string name="nationality">Nationality</string>
    <string name="gender_profile">Gender</string>
    <string name="change_password">Change password</string>
    <string name="notifications">Notifications</string>
    <string name="membership">Membership</string>
    <string name="language">Language</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log out</string>
    <string name="classes">Classes</string>
    <string name="trainers">Trainers</string>
    <string name="myProfile">My Profile</string>
    <string name="gyms">Gyms</string>
    <string name="gym">Gym</string>
    <string name="gym_profile">Gym Profile</string>
    <string name="currency">KWD</string>
    <string name="valid">Valid for </string>
    <string name="clean_filter">Clear All</string>
    <string name="filter">Filter</string>
    <string name="your_current_plan">YOUR CURRENT PLAN</string>
    <string name="select">SELECT</string>
    <string name="of"><b>of</b></string>
    <string name="classes_remaining">credits remaining</string>
    <string name="valid_till">Valid till</string>
    <string name="coach_at">Coach at </string>
    <string name="recharge">"<u>Buy Credits</u>"</string>
    <string name="buy_classes">Buy Credits</string>
    <string name="email_error_text">Please provide a valid email.</string>
    <string name="password_required_error">We need Password for login.</string>
    <string name="email_required_error">We need email for login.</string>
    <string name="name_required_error">Your first name is required.</string>
    <string name="last_name_required_error">Your last name is required.</string>
    <string name="gender_required">Your gender is required.</string>
    <string name="promo_code_required">Promo code is required.</string>
    <string name="email_required_validate">The email you entered is incorrect.</string>
    <string name="phone_email_required_validate">The phone and email you entered are incorrect.</string>
    <string name="phone_required_validate">The mobile number you entered is incorrect.</string>
    <string name="something_went_wrong">Some thing went wrong please try again.</string>
    <string name="password_required">Please enter your password</string>
    <string name="password_weak">Your password must be 6 characters or more</string>
    <string name="confirm_password_required">Please enter your confirm password</string>
    <string name="confirm_password_not_matched">Password does not match</string>
    <string-array name="gender_type">
        <item>Male</item>
        <item>Female</item>

    </string-array>
    <string name="upcoming_classes">Upcoming Classes</string>
    <string name="today">Today</string>
    <string name="sign_up">"<b><u>Sign Up</u></b>"</string>
    <string name="profile_package_expiry">" remaining until your credits expire."</string>
    <string name="view_gym_visit_limits">View gym visit limits</string>
    <string name="learn_more_about_credits">Learn more about our credits</string>
    <string name="gym_visit_limits_no_lines">gym visit limits</string>
    <string name="select_plan">Select Plan</string>
    <string name="membership_no_package_heading_1">Pick a plan that suits your fitness needs. The ‘Get Set’ and ‘Pro’ options will allow you to visit all the gyms available on P5M. Be sure to check each gym visit limits to find the plan that works best for you.</string>
    <string name="membership_only_drop_in_package_heading_1">Purchase a one-time visit without changing your current plan. Studio visits will not reset with this purchase. In the case of cancellation you will have 1 week to use this class.</string>
    <string name="membership_only_drop_in_package_heading_2">This class will not roll over to your next plan, so make sure to use your class before the class expires.</string>
    <string name="membership_drop_in_package_heading_1">Pick a plan that suits your fitness needs. The ‘Get Set’ and ‘Pro’ options will allow you to visit all the gyms available on P5M. Be sure to check each gym visit limits to find the plan that works best for you.</string>
    <string name="membership_drop_in_package_heading_2">This class will not roll over to your next plan, so make sure to use your class before the class expires.</string>
    <string name="membership_general_package_heading_2">Unused classes do not roll over to your next plan, so make sure to use up all your classes before the plan expires.</string>
    <string name="title_activity_class_profile">ClassProfile</string>
    <string name="title_activity_gym_profile">GymProfile</string>
    <string name="membership_drop_in_info">"You can only access the following gym with this purchase. In case of cancellation, you have 7 days from the date of cancellation to attend a class at the same facility."</string>
    <string name="membership_package_limit_info">"You can't purchase this package. It's validity is less than your selected class."</string>
    <string name="package_limit_header">Under each plan, there are limits to the number of times you can visit each gym. Check below for the number of time you can visit a gym per plan. Once the limit is reached, you may still visit your favorite gym by purchasing a single visit pass. </string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="profile_validiy_no_package">Fuel your workout</string>
    <string name="title_activity_sign_up_options" translatable="false">SignUpOptions</string>
    <string name="your_fitness_freedom">Your Fitness Freedom</string>
    <string name="registration_done">Registration completed successfully!</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_class">Cancel booking</string>
    <string name="cancel_class_friend">Cancel Friend\'s booking</string>
    <string name="cancel_class_both">Cancel Both bookings</string>
    <string name="select_an_option">Select an option</string>
    <string name="drop_in_package_desc">This is drop in package description</string>
    <string name="buy_membership_description">This is P5M package description</string>
    <string name="one_class_entry">1 class entry (%s)</string>
    <string name="book_with_p5m_membership">Book with P5M Membership</string>
    <string name="get_started_suggesstion">To see the classes that are perfect for you, tell us a little about yourself.</string>
    <string name="get_started">Get Started</string>
    <string name="want_us_to_expand_in_your_city">We\'re not in %s yet....</string>
    <string name="let_us_know_your_details">If you want us to email you once we are available in your city, and get special offers, share your email with us.</string>
    <string name="your_city">City</string>
    <string name="location_search_for">In what city are you working out? </string>
    <string name="keep_me_up_to_date">Keep me up to date</string>
</resources>