<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="www.gymhop.p5m.view.activity.LoginRegister.RegistrationDoneActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/your_fitness_freedom"
            android:textColor="@color/theme_dark_text"
            android:textSize="@dimen/registration_title" />

        <www.gymhop.p5m.view.activity.custom.SquareImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:scaleType="fitCenter"
            android:src="@drawable/stub_check" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/registration_done"
            android:textColor="@color/theme_dark_light_text"
            android:textSize="@dimen/text_large" />

        <Button
            android:layout_marginTop="28dp"
            android:id="@+id/buttonDone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_normal"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/button_white"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/start_journey"
            android:textColor="@color/black" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
