<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img"
    tools:context=".view.activity.Main.GetStartedActivity">

    <ImageView
        android:id="@+id/imageViewBack"
        android:layout_width="@dimen/margin_20"
        android:layout_height="@dimen/margin_20"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/textViewSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/skip"
        android:textSize="@dimen/text_small"
        android:fontFamily="sans-serif"
        android:gravity="center_vertical"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewBack"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/get_started_suggesstion"

        android:textColor="@color/white"
        android:textSize="25sp"
        android:lineSpacingExtra="@dimen/margin_5"
        android:lineHeight="@dimen/margin_35"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/textViewSkip"
        app:layout_constraintStart_toStartOf="@+id/imageViewBack"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBack" />

    <Button
        android:id="@+id/buttonGetStarted"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/get_started"
        android:background="@drawable/rounded_bottomcorner"
        android:textColor="@color/theme_book"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>